...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-lK-ee6">
                                <rect key="frame" x="20" y="260" width="560" height="43"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zRc-oN-Kad">
                                <rect key="frame" x="20" y="311" width="560" height="43"/>
                                <constraints>
...
                                    <constraint firstAttribute="height" constant="46" id="lKk-CH-fpD"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VfX-QR-3ae"/>
...
                                    <constraint firstAttribute="width" constant="322" id="ktc-qP-WEO"/>
                                </constraints>
                                <state key="normal" title="Create Account"/>
                                <connections>
                                    <segue destination="bsD-ip-mg7" kind="show" id="ypB-yZ-srU"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="10u-XQ-VeS">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="vQE-Iq-bWC">
                            <connections>
                                <segue destination="o8a-E2-DZA" kind="show" identifier="settings" id="1oD-X7-Zej"/>
...
                                    <constraint firstAttribute="width" constant="322" id="oZV-zs-T6c"/>
                                </constraints>
                                <state key="normal" title="Sign out"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="height" constant="46" id="iA4-C6-3Wt"/>
                                </constraints>
                                <state key="normal" title="Change password"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="width" constant="322" id="p0Q-9p-Q6l"/>
                                </constraints>
                                <state key="normal" title="Submit"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <constraint firstAttribute="width" constant="322" id="r0u-K2-8vo"/>
                                </constraints>
                                <state key="normal" title="Next"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y77-MG-oAJ">
                                <rect key="frame" x="20" y="143" width="560" height="43"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wIC-1t-RzD">
                                <rect key="frame" x="20" y="194" width="560" height="43"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EGS-6u-Ona">
                                <rect key="frame" x="20" y="296" width="560" height="43"/>
                                <constraints>
...
                                    <constraint firstAttribute="width" constant="322" id="qO8-zD-iyB"/>
                                </constraints>
                                <state key="normal" title="Finish">
                                    <color key="titleColor" red="0.16078431372549021" green="0.47843137254901963" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
